--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -5,6 +5,7 @@
     "ember-cli-shims": "0.1.1",
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
-    "tether": "1.3.2"
+    "tether": "1.3.2",
+    "font-awesome": "~4.5.0"
   }
 }
