--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.1",
     "cheerio": "^0.20.0",
     "compression": "^1.6.2",
+    "ejs": "^2.4.1",
     "express": "^4.13.4",
     "morgan": "^1.7.0",
     "request": "^2.72.0"
