--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "morgan": "^1.7.0",
+    "redis": "^2.6.1",
     "request": "^2.72.0"
   }
 }
