--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.13.4",
     "morgan": "^1.7.0",
     "redis": "^2.6.1",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "winston": "^2.2.0"
   }
 }
