Display week + swiping (working on it!)

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.7.0",
     "redis": "^2.6.1",
     "request": "^2.72.0",
+    "swipejs": "^2.0.9",
     "winston": "^2.2.0"
   },
   "devDependencies": {
