--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "chai": "^3.5.0",
     "cheerio": "^0.20.0",
     "compression": "^1.6.2",
+    "connect-redis": "^3.1.0",
     "ejs": "^2.4.1",
     "express": "^4.14.0",
+    "express-session": "^1.13.0",
     "morgan": "^1.7.0",
     "redis": "^2.6.1",
     "request": "^2.72.0",
