--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.3.5",
     "body-parser": "^1.15.1",
+    "bootstrap": "^4.0.0-alpha.2",
     "chai": "^3.5.0",
     "cheerio": "^0.20.0",
     "compression": "^1.6.2",
@@ -18,13 +20,25 @@
     "ejs": "^2.4.1",
     "express": "^4.14.0",
     "express-session": "^1.13.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "font-awesome": "^4.6.3",
+    "jquery": "2.2.4",
     "morgan": "^1.7.0",
     "redis": "^2.6.1",
     "request": "^2.72.0",
+    "socket.io": "^1.4.8",
     "swipejs": "^2.0.9",
+    "tether": "^1.3.2",
     "winston": "^2.2.0"
   },
   "devDependencies": {
-    "mocha": "^2.5.3"
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.9.0",
+    "mocha": "^2.5.3",
+    "node-sass": "^3.8.0",
+    "sass-loader": "^3.2.2",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1"
   }
 }
