--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redis": "^2.6.1",
     "request": "^2.72.0",
     "socket.io": "^1.4.8",
+    "socket.io-client": "^1.4.8",
     "swipejs": "^2.0.9",
     "tether": "^1.3.2",
     "winston": "^2.2.0"
