--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "font-awesome": "^4.7.0",
     "jquery": "2.2.4",
+    "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "redis": "^2.6.1",
     "request": "^2.72.0",
