--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.9.0",
     "mocha": "^2.5.3",
