--- a/package.json
+++ b/package.json
@@ -38,13 +38,17 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "bootstrap": "^4.0.0-alpha.2",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "mocha": "^2.5.3",
     "node-sass": "^3.8.0",
+    "postcss-loader": "^1.2.2",
+    "resolve-url-loader": "^1.6.1",
     "sass-loader": "^3.2.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1"
+    "webpack": "^2.2.0"
   }
 }
