--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "bluebird": "^3.3.5",
     "body-parser": "^1.15.1",
-    "bootstrap": "4.0.0-alpha.2",
+    "bootstrap": "^4.0.0-alpha.4",
     "chai": "^3.5.0",
     "cheerio": "^0.20.0",
     "compression": "^1.6.2",
@@ -38,15 +38,17 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
-    "bootstrap": "^4.0.0-alpha.2",
+    "bootstrap-loader": "^2.0.0-beta.20",
     "css-loader": "^0.23.1",
+    "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
+    "imports-loader": "^0.7.0",
     "mocha": "^2.5.3",
-    "node-sass": "^3.8.0",
+    "node-sass": "^3.13.1",
     "postcss-loader": "^1.2.2",
     "resolve-url-loader": "^1.6.1",
-    "sass-loader": "^3.2.2",
+    "sass-loader": "^3.2.3",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0"
