--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ejs": "^2.4.1",
     "express": "^4.14.0",
     "express-session": "^1.13.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta",
     "font-awesome": "^4.7.0",
     "jquery": "2.2.4",
     "moment": "^2.17.1",
@@ -41,7 +41,6 @@
     "bootstrap-loader": "^2.0.0-beta.20",
     "css-loader": "^0.23.1",
     "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "imports-loader": "^0.7.0",
     "mocha": "^2.5.3",
