--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     build: .
     volumes:
      - .:/usr/src/app
+     - /usr/src/app/dist
+     - /usr/src/app/public/dist
     ports:
      - "${FOOD_PORT}:3000"
     depends_on:
