--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "popper.js": "^1.12.5",
+    "pdfjs": "^2.0.0-alpha.3",
+    "pdfjs-dist": "^1.8.450",
     "redis": "^2.6.1",
     "request": "^2.72.0",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
     "swipejs": "^2.0.9",
     "tether": "^1.3.2",
-    "winston": "^2.2.0"
+    "winston": "^2.2.0",
+    "xhr2": "^0.1.4"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
