--- a/.bootstraprc
+++ b/.bootstraprc
@@ -1,12 +1,9 @@
 ---
 # Output debugging info
-#loglevel: debug
+# loglevel: debug
 
 # Major version of Bootstrap: 3 or 4
 bootstrapVersion: 4
-
-# If Bootstrap version 4 is used - turn on/off flexbox model
-useFlexbox: true
 
 # Webpack loaders, order matters
 styleLoaders:
@@ -55,58 +52,56 @@ styles:
   mixins: true
 
   # Reset and dependencies
-  normalize: false
-  print: false
+  print: true
 
   # Core CSS
-  reboot: false
-  type: true
-  images: true
-  code: true
-  grid: true
-  #tables: true
-  #forms: true
   buttons: true
+  code: true
+  forms: true
+  grid: true
+  images: true
+  reboot: true
+  tables: true
+  type: true
 
   # Components
-  animation: false
-  dropdown: false
-  button-group: true
-  input-group: false
-  custom-forms: false
-  nav: false
-  navbar: false
-  card: true
-  breadcrumb: false
-  pagination: false
-  jumbotron: false
-  alert: false
-  progress: false
-  media: false
-  list-group: true
-  responsive-embed: true
-  close: true
+  alert: true
   badge: true
+  breadcrumb: true
+  button-group: true
+  card: true
+  close: true
+  custom-forms: true
+  dropdown: true
+  input-group: true
+  jumbotron: true
+  list-group: true
+  media: true
+  nav: true
+  navbar: true
+  pagination: true
+  progress: true
+  transitions: true
 
   # Components w/ JavaScript
-  modal: false
-  tooltip: false
-  popover: false
-  carousel: false
+  carousel: true
+  modal: true
+  popover: true
+  tooltip: true
 
   # Utility classes
   utilities: true
 
 ### Bootstrap scripts
 scripts:
-  alert: false
+  alert: true
   button: true
-  carousel: false
-  collapse: false
-  dropdown: false
-  modal: false
-  popover: false
-  scrollspy: false
-  tab: false
-  tooltip: false
+  carousel: true
+  collapse: true
+  dropdown: true
+  modal: true
+  popover: true
+  scrollspy: true
+  tab: true
+  tooltip: true
   util: true
