--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "bluebird": "^3.3.5",
     "body-parser": "^1.15.1",
-    "bootstrap": "^4.0.0-alpha.4",
+    "bootstrap": "4.0.0-beta",
     "chai": "^3.5.0",
     "cheerio": "^0.20.0",
     "compression": "^1.6.2",
@@ -26,6 +26,7 @@
     "jquery": "2.2.4",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
+    "popper.js": "^1.12.5",
     "redis": "^2.6.1",
     "request": "^2.72.0",
     "socket.io": "^1.4.8",
@@ -38,7 +39,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.0",
-    "bootstrap-loader": "^2.0.0-beta.20",
+    "bootstrap-loader": "^2.2.0",
     "css-loader": "^0.23.1",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.9.0",
