--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "express-session": "^1.13.0",
     "extract-text-webpack-plugin": "^2.0.0-beta",
     "font-awesome": "^4.7.0",
-    "jquery": "2.2.4",
+    "jquery": "^3.2.1",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "popper.js": "^1.12.5",
@@ -39,7 +39,6 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.0",
-    "bootstrap-loader": "^2.2.0",
     "css-loader": "^0.23.1",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.9.0",
