--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "bluebird": "^3.3.5",
     "body-parser": "^1.15.1",
-    "bootstrap": "4.0.0-beta",
+    "bootstrap": "^4.1.3",
     "chai": "^3.5.0",
     "cheerio": "^0.20.0",
     "compression": "^1.6.2",
