--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "build": "webpack"
+    "build": "webpack --config app/webpack.config.js"
   },
   "author": "",
   "license": "ISC",
