--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "imports-loader": "^0.7.0",
     "mocha": "^2.5.3",
     "node-sass": "^4.5.3",
+    "nodemon": "^1.19.1",
     "postcss-loader": "^1.2.2",
     "resolve-url-loader": "^1.6.1",
     "sass-loader": "^3.2.3",
