FIX new mensa page by not using fixed names for Menus anymore

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "body-parser": "^1.15.1",
     "bootstrap": "^4.1.3",
     "chai": "^3.5.0",
-    "cheerio": "^0.20.0",
+    "cheerio": "^1.0.0-rc.3",
     "compression": "^1.6.2",
     "connect-redis": "^3.1.0",
     "cookieconsent": "^2.0.0",
@@ -25,11 +25,12 @@
     "font-awesome": "^4.7.0",
     "he": "^1.2.0",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.15",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
-    "popper.js": "^1.12.5",
     "pdfjs": "^2.0.0-alpha.3",
     "pdfjs-dist": "^1.8.450",
+    "popper.js": "^1.12.5",
     "redis": "^2.6.1",
     "request": "^2.72.0",
     "socket.io": "^1.4.8",
