--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Upload the deploy key, connect, and trigger deployment
       run: |
+        mkdir -p ~/.ssh
+        echo $SSH_HOST_FINGERPRINT >> ~/.ssh/known_hosts
         eval $(ssh-agent -s)
         ssh-add <(echo "$SSH_DEPLOY_KEY")
         $SSH_DEPLOY_CMD
@@ -21,3 +23,4 @@ jobs:
       env:
         SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
         SSH_DEPLOY_CMD: ${{ secrets.SSH_DEPLOY_CMD }}
+        SSH_HOST_FINGERPRINT: ${{ secrets.SSH_HOST_FINGERPRINT }}
