--- a/package.json
+++ b/package.json
@@ -18,44 +18,49 @@
     "compression": "^1.6.2",
     "connect-redis": "^3.1.0",
     "cookieconsent": "^2.0.0",
+    "cssnano": "^4.1.10",
     "ejs": "^2.4.1",
     "express": "^4.14.0",
     "express-session": "^1.13.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta",
     "font-awesome": "^4.7.0",
     "he": "^1.2.0",
     "jquery": "^3.5.0",
     "lodash": "^4.17.19",
+    "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "pdfjs": "^2.0.0-alpha.3",
     "pdfjs-dist": "^1.8.450",
     "popper.js": "^1.12.5",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
     "redis": "^2.6.1",
     "request": "^2.72.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "sugarss": "^2.0.0",
     "swipejs": "^2.0.9",
     "tether": "^1.3.2",
+    "webpack": "^4.44.1",
     "winston": "^2.2.0",
     "xhr2": "^0.1.4"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.0",
     "css-loader": "^4.2.1",
     "exports-loader": "^0.6.3",
-    "file-loader": "^0.9.0",
+    "file-loader": "^6.0.0",
     "imports-loader": "^0.7.0",
     "mocha": "^8.1.1",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
-    "postcss-loader": "^1.2.2",
+    "postcss-loader": "^3.0.0",
     "resolve-url-loader": "^1.6.1",
-    "sass-loader": "^3.2.3",
-    "style-loader": "^0.13.1",
+    "sass-loader": "^9.0.3",
+    "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
-    "webpack": "^4.44.1"
+    "webpack-cli": "^3.3.12"
   }
 }
