--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    "> 0.25%, not dead"
+  ],
   "dependencies": {
     "bluebird": "^3.3.5",
     "body-parser": "^1.15.1",
@@ -26,11 +29,11 @@
     "he": "^1.2.0",
     "jquery": "^3.5.0",
     "lodash": "^4.17.19",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "^1.0.0",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "pdfjs": "^2.0.0-alpha.3",
-    "pdfjs-dist": "^1.8.450",
+    "pdfjs-dist": "^3.1.81",
     "popper.js": "^1.12.5",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
@@ -41,26 +44,26 @@
     "sugarss": "^2.0.0",
     "swipejs": "^2.0.9",
     "tether": "^1.3.2",
-    "webpack": "^4.44.1",
+    "webpack": "^5.75.0",
     "winston": "^2.2.0",
     "xhr2": "^0.1.4"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.24.0",
-    "css-loader": "^4.2.1",
+    "babel-loader": "^8.0.0",
+    "@babel/preset-env": "^7.20.2",
+    "css-loader": "^4.3.0",
     "exports-loader": "^0.6.3",
     "file-loader": "^6.0.0",
     "imports-loader": "^0.7.0",
     "mocha": "^8.1.1",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.0",
     "nodemon": "^2.0.4",
     "postcss-loader": "^3.0.0",
     "resolve-url-loader": "^1.6.1",
-    "sass-loader": "^9.0.3",
+    "sass-loader": "^13.2.0",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^4.0.0"
   }
 }
