--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "build": "webpack --config app/webpack.config.js"
+    "build": "webpack --config app/webpack.config.js",
+    "start": "nodemon app/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +20,6 @@
     "chai": "^3.5.0",
     "cheerio": "^1.0.0-rc.3",
     "compression": "^1.6.2",
-    "connect-redis": "^3.1.0",
     "cookieconsent": "^2.0.0",
     "cssnano": "^5.1.14",
     "ejs": "^2.4.1",
@@ -32,12 +32,12 @@
     "mini-css-extract-plugin": "^1.0.0",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
+    "node-cache": "^5.1.2",
     "pdfjs": "^2.0.0-alpha.3",
     "pdfjs-dist": "^3.1.81",
     "popper.js": "^1.12.5",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
-    "redis": "^2.6.1",
     "request": "^2.72.0",
     "socket.io": "^2.4.0",
     "socket.io-client": "^2.3.0",
@@ -49,18 +49,19 @@
     "xhr2": "^0.1.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^8.0.0",
-    "@babel/preset-env": "^7.20.2",
     "css-loader": "^4.3.0",
     "exports-loader": "^0.6.3",
     "file-loader": "^6.0.0",
     "imports-loader": "^0.7.0",
     "mocha": "^10.2.0",
-    "node-sass": "^8.0.0",
     "nodemon": "^2.0.4",
     "postcss-loader": "^3.0.0",
     "resolve-url-loader": "^5.0.0",
+    "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
