--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "build": "webpack --config app/webpack.config.js",
+    "build": "vite build",
     "start": "nodemon app/index.js"
   },
   "author": "",
@@ -17,7 +17,6 @@
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.1",
     "bootstrap": "^4.1.3",
-    "chai": "^3.5.0",
     "cheerio": "^1.0.0-rc.3",
     "compression": "^1.6.2",
     "cookieconsent": "^2.0.0",
@@ -26,45 +25,26 @@
     "express": "^4.14.0",
     "express-session": "^1.13.0",
     "font-awesome": "^4.7.0",
-    "he": "^1.2.0",
     "jquery": "^3.5.0",
     "lodash": "^4.17.19",
-    "mini-css-extract-plugin": "^1.0.0",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "node-cache": "^5.1.2",
     "pdfjs": "^2.0.0-alpha.3",
     "pdfjs-dist": "^3.1.81",
     "popper.js": "^1.12.5",
-    "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.7.0",
     "request": "^2.72.0",
     "socket.io": "^2.4.0",
     "socket.io-client": "^2.3.0",
-    "sugarss": "^2.0.0",
     "swipejs": "^2.0.9",
     "tether": "^1.3.2",
-    "webpack": "^5.75.0",
     "winston": "^2.2.0",
     "xhr2": "^0.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
-    "@babel/preset-env": "^7.20.2",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^8.0.0",
-    "css-loader": "^4.3.0",
-    "exports-loader": "^0.6.3",
-    "file-loader": "^6.0.0",
-    "imports-loader": "^0.7.0",
-    "mocha": "^10.2.0",
+    "@rollup/plugin-replace": "^5.0.2",
     "nodemon": "^2.0.4",
-    "postcss-loader": "^3.0.0",
-    "resolve-url-loader": "^5.0.0",
     "sass": "^1.57.1",
-    "sass-loader": "^13.2.0",
-    "style-loader": "^1.2.1",
-    "url-loader": "^4.1.0",
-    "webpack-cli": "^4.0.0"
+    "vite": "^4.0.3"
   }
 }
