--- a/package.json
+++ b/package.json
@@ -14,36 +14,36 @@
     "> 0.25%, not dead"
   ],
   "dependencies": {
-    "bluebird": "^3.3.4",
-    "body-parser": "^1.15.1",
-    "bootstrap": "^4.1.3",
-    "cheerio": "^1.0.0-rc.3",
-    "compression": "^1.6.2",
-    "cookieconsent": "^2.0.0",
+    "@popperjs/core": "^2.11.6",
+    "@rollup/plugin-inject": "^5.0.3",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.20.1",
+    "bootstrap": "^5.2.3",
+    "cheerio": "1.0.0-rc.12",
+    "compression": "^1.7.4",
     "cssnano": "^5.1.14",
-    "ejs": "^2.4.1",
-    "express": "^4.14.0",
-    "express-session": "^1.13.0",
+    "ejs": "^2.7.4",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.5.0",
-    "lodash": "^4.17.19",
-    "moment": "^2.17.1",
-    "morgan": "^1.7.0",
+    "jquery": "^3.6.3",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
-    "pdfjs": "^2.0.0-alpha.3",
+    "pdfjs": "^2.4.7",
     "pdfjs-dist": "^3.1.81",
-    "popper.js": "^1.12.5",
-    "request": "^2.72.0",
-    "socket.io": "^2.4.0",
-    "socket.io-client": "^2.3.0",
-    "swipejs": "^2.0.9",
-    "tether": "^1.3.2",
-    "winston": "^2.2.0",
+    "request": "^2.88.2",
+    "socket.io": "^2.5.0",
+    "socket.io-client": "^4.5.4",
+    "swipejs": "^2.3.1",
+    "tether": "^1.4.7",
+    "winston": "^2.4.7",
     "xhr2": "^0.1.4"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^5.0.2",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.20",
     "sass": "^1.57.1",
     "vite": "^4.0.3"
   }
