--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
         },
         {
             "src": "/",
-            "use": "@vercel/static"
+            "use": "@vercel/node"
         }
     ]
 }
