--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "bootstrap": "^5.2.3",
     "cheerio": "1.0.0-rc.12",
     "compression": "^1.7.4",
-    "cssnano": "^5.1.14",
     "ejs": "^2.7.4",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -33,14 +32,12 @@
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
-    "pdfjs": "^2.4.7",
     "pdfjs-dist": "^3.1.81",
     "request": "^2.88.2",
     "socket.io": "^2.5.0",
     "socket.io-client": "^4.5.4",
     "swipejs": "^2.3.1",
-    "tether": "^1.4.7",
-    "xhr2": "^0.1.4"
+    "tether": "^1.4.7"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^5.0.2",
