--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "mocha",
     "build": "vite build",
+    "postinstall": "npm run build",
     "start": "node app/index.js"
   },
   "author": "",
