--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha",
     "build": "vite build",
-    "postinstall": "npm run build",
+    "prestart": "npm run build",
     "start": "node app/index.js"
   },
   "author": "",
