--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,6 @@
             "src": "app/index.js",
             "use": "@vercel/node"
         }
-    ]
+    ],
+    "buildCommand": "npm run build"
 }
